# sapient-mcp

./: .gitattributes  .gitignore  README.md  claude_desktop_config.json  pyproject.toml  sap_config.json
src/robosapiens_mcp/: __init__.py  __main__.py  config.py  server.py  session.py
src/sapient_mcp/: config.py  server.py  session.py
