[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sapient-mcp"
version = "1.0.0"
description = "Intelligent SAP GUI automation for AI agents — MCP server powered by RoboSAPiens"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Toni Ramchandani" }]
keywords = ["mcp", "sap", "automation", "robot-framework", "robosapiens", "sapient", "llm", "ai-agent"]

dependencies = [
    "mcp>=1.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "robotframework>=7.0",
    "robotframework-robosapiens>=2.8.0",
]

[project.scripts]
sapient-mcp = "sapient_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
